# simple-cmake-cpp

./: CMakeLists.txt  CMakeLists.txt~
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
